test/org/midica/testfiles/failing/const-not-enough-args.midica
INCLUDE inc/instruments.midica

CONST $crd 

CHORD test $crd

0  test  /4
